# prkserver

./: Cargo.toml  Readme.md  Todo  config.toml
src/: config.rs  endpoints.rs  main.rs  middleware.rs  models.rs  template.rs  template_create.rs
src/adapters/cli/: cli_adapter.rs  mod.rs
src/application/services/: project_service.rs
src/domain/: mod.rs
src/domain/models/: config.rs  template.rs
src/domain/ports/: file_system.rs  mod.rs  project_generator.rs
src/infrastructure/file_system/: local_file_system.rs  mod.rs
src/output/: cargo_toml_content.rs  compose_yaml_content.rs  database_connection_content.rs  docker_ignore_content.rs  dockerfile_content.rs  env_content.rs  gitignore_content.rs  http_content.rs  main_content.rs  mod.rs
template/backend_template/: Cargo.toml
template/backend_template/src/: main.rs
