[package]
name = "backend_template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.14"
env_logger = "0.11.3"
log = "0.4"
